<resources>

    <string name="copy_tips">The selected text has already been copied</string>
    <string name="share_title">Share This Text</string>
    <string name="app_label">BigBang</string>
    <string name="a_msg_no_words">No text recognized</string>
    <string name="ocr_recognize">Recognizing</string>
    <string name="ocr_cancel">Press to cancel</string>
    <string name="scanner_unavailable">Scanner not installed</string>
    <string name="ai_boom">AI Segment</string>
    <string name="text_boom">Smart Segment</string>
    <string name="network_boom">Use Network for Smart Segment</string>
    <string name="ocr_title">OCR</string>
    <string name="text_boom_settings">Big Bang Settings</string>
    <string name="default_search_way">Default Search</string>
    <string name="search_via_baidu">Baidu</string>
    <string name="search_via_google">Google</string>
    <string name="search_via_bing">Bing</string>
    <string name="search_via_shenma">Shenma</string>
    <string name="search_via_youdao">Youdao Dictionary</string>
    <string name="search_via_powerword">Iciba</string>
    <string name="search_via_hudong">Hudong Baike</string>
    <string name="search_via_bingdict">Bing Dictionary</string>
    <string name="search_via_hidict">Dict.CN</string>
    <string name="search_via_baidupedia">Baidu Baike</string>
    <string name="thumb_trigger_area_tips">The smaller the trigger size (the size of the area of the screen to trigger Thumb Swipe), the easier it is to set off. You can adjust the trigger size to avoid setting it off accidentally.</string>
    <string name="ocr_tips">OCR is provided by /camscanner/ for free</string>
    <string name="ai_boom_tips">AI Smart text support provided by /tricorn/Trio.</string>
    <string name="dlg_title_notice">Notice</string>
    <string name="install_camscanner_message">CamScanner is not installed on this system. Tap "Install" to go to the App Market to install this app and start using OCR.</string>
    <string name="install_text">Install</string>
    <string name="default_dict">Default Dictionary</string>
    <string name="thumb_trigger_area">Trigger Area</string>
    <string name="acc_enable">BigBang</string>
    <string name="acc_enable_tips">Enable BigBang by allowing Accessibility service in Settings</string>
    <string name="thumb_trigger_area_smallest">Minimum</string>
    <string name="thumb_trigger_area_small">Small</string>
    <string name="thumb_trigger_area_middle">Medium</string>
    <string name="thumb_trigger_area_large">Large</string>
    <string name="thumb_trigger_area_largest">Maximum</string>
    <string name="network_disconnected">No Internet Connection</string>
    <string name="title_button_text_back">Back</string>
    <string name="goto_browser">Open in Browser</string>
    <string name="close">Close</string>
    <string name="bang_notify_title">BigBang is hidden</string>
    <string name="bang_notify_text">Click to show floating button</string>
    <string name="accessibility_boom_description">Enable BigBang service can help you to edit text very convenient. \n We will not collect your personal information, but only used for AI segment. \n If you do not want this, just disable "AI segment", and all the things are processed on your phone.</string>
    <string name="boom_image_not_ready">Current small window not support boom, please find a text</string>
    <string name="crop_recognize">Recognize</string>
    <string name="crop_cancel">Cancel</string>
    <string name="msg_android_too_old">Your android version is not supported</string>
    <string name="msg_screen_capture_error">Please allow to capture the screen, otherwise can\'t recognize text</string>
    <string name="crop_title">Area Identify</string>
    <string name="msg_ocr_error_network">Recognized failed because network</string>
    <string name="ocr_not_enabled_message">OCR is not enabled, open BigBang APP to enable</string>
</resources>
