<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/crop_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/ocr_title"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <com.edmodo.cropper.CropImageView
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/CropImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/crop_title"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/CropImageView"
        android:background="@android:color/black"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:minWidth="80dp"
            android:text="@string/crop_cancel"
            android:textColor="@color/title_text_color"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/button_crop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:minWidth="80dp"
            android:text="@string/crop_recognize"
            android:textColor="@color/title_text_color"
            android:textSize="16sp"/>
    </RelativeLayout>

</RelativeLayout>